# wam-tutorial-reconstruction

./: Cargo.toml  rustfmt.toml
example-programs/m0/: example.pl  exercise_2_2.pl
example-programs/m1/: eq.pl  example.pl
example-programs/m2/: eq.pl  example.pl
example-programs/m3/: bool.pl
proptest-regressions/common/: flatten.txt  tests.txt
proptest-regressions/unification/: mod.txt
src/: lib.rs  macros.rs  main.rs  test_utils.rs
src/common/: env.rs  flatten.rs  mod.rs  parser.rs  parsers.rs  tests.rs
src/common/tests/: mod.rs  prop.rs
src/facts/: mod.rs  program.rs  query.rs
src/flat/: control.rs  mod.rs  program.rs  query.rs  store.rs
src/flat/compile/: clause.rs  fact.rs  flatten.rs  mod.rs
src/unification/: control.rs  env.rs  flatten.rs  mod.rs  program.rs  query.rs  state.rs  store.rs
