[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A Rust implementation of the machines in \"Warren's Abstract Machine: A Tutorial Reconstruction.\""
name = "wam-tutorial-reconstruction"
version = "0.1.0"

[dependencies]
ansi_term = "0.10.2"
either = "1.4.0"
failure = "0.1.1"
lazy_static = "1.0.0"
linefeed = "0.4.0"
log = { version = "0.4.1", features = ["std"] }
nom = { version = "3.2.1", features = ["verbose-errors"] }
regex = "0.2.6"
structopt = "0.2.3"
symbol = "0.1.1"

[[bin]]
name = "wam"
path = "src/bin/main.rs"

[dev-dependencies]
proptest = "0.5.0"
